fix: circuitbreaker fallback